--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TinDog</title>
   <!-- Importing Bootstrap. -->
-  <link rel="stylesheet" href="/Bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="/bootstrap.css">
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <!-- Importing FontAwesome Package to import fonts in our Website. -->
   <script src="https://kit.fontawesome.com/2145778a96.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/styles.css">
   <!-- Google Fonts. -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,7 +68,7 @@
       </div>
      <div class="col-lg-6 p-3">
       <div>
-        <img src="images/iphone6.png" alt="iphone-mockup" class="iphone-mockup">
+        <img src="/iphone6.png" alt="iphone-mockup" class="iphone-mockup">
       </div>
      </div>
     </div>
@@ -121,12 +121,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active ">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-         <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile" class="d-block w-100">
+         <img class="testimonial-image" src="/dog-img.jpg" alt="dog-profile" class="d-block w-100">
          <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-         <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile" class="d-block w-100">
+         <img class="testimonial-image" src="/lady-img.jpg" alt="lady-profile" class="d-block w-100">
          <em>Beverly, Illinois</em>
         </div>
       </div>
@@ -149,10 +149,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="/mashable.png" alt="mashable-logo">
 
   </section>
 
