--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TinDog</title>
+  <link rel="icon" type="image/x-icon/png" href="favicon.png">
   <!-- Importing Bootstrap. -->
   <link rel="stylesheet" href="bootstrap.css">
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
